# eip2nats

./: .gitignore  DEVELOPMENT.md  LICENSE  PUBLISH.md  QUICKSTART.md  README.md  THIRD_PARTY_LICENSES  VSCODE_DEBUG.md  activate.sh  pyproject.toml  run.sh  setup.py  setup_project.sh  setup_project_linux.sh  setup_project_windows.ps1
examples/: README.md  example_cpp.cpp  example_cpp_clipx.cpp  example_python.py  example_python_clipx.py  example_python_rm75e.py
scripts/: binding_CMakeLists.txt  build_binding.py  build_config.py  build_dependencies.py  build_eipscanner.py  build_example_cpp.py  build_example_cpp_clipx.py  build_nats.py  build_python_binding.sh  build_standalone.sh  build_wheels.py
src/eip2nats/: EIPtoNATSBridge.cpp  EIPtoNATSBridge.h  __init__.py  bindings.cpp
tests/: test_python.py  test_standalone.cpp
