[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eip2nats"
version = "1.0.2"
description = "EtherNet/IP to NATS Bridge with bundled dependencies"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES"]
authors = [
    {name = "Ibon Zalbide", email = "ibon.zalbide@kliskatek.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.0.243",
]
publish = [
    "twine>=4.0",
    "hatch>=1.0",
]

[project.urls]
Homepage = "https://github.com/kliskatek/eip2nats"
Documentation = "https://github.com/kliskatek/eip2nats/blob/main/README.md"
Repository = "https://github.com/kliskatek/eip2nats"

[tool.hatch.build.targets.wheel]
packages = ["src/eip2nats"]

[tool.hatch.build]
artifacts = [
    "src/eip2nats/eip_nats_bridge*.so",
    "src/eip2nats/eip_nats_bridge*.pyd",
    "src/eip2nats/lib/*.so*",
    "src/eip2nats/lib/*.dll",
]

[tool.hatch.build.targets.wheel.hooks.custom]
# Uses hatch_build.py to force platform-specific wheel tags

[tool.black]
line-length = 100
target-version = ['py37']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
