[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eip2nats"
version = "1.0.0"
description = "EtherNet/IP to NATS Bridge with bundled dependencies"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES"]
authors = [
    {name = "Ibon Zalbide", email = "ibon.zalbide@kliskatek.com"},
    {name = "Aritz Alonso", email = "aritz.alonso@kliskatek.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.0.243",
]
publish = [
    "twine>=4.0",
    "hatch>=1.0",
]

[project.urls]
Homepage = "https://github.com/kliskatek/eip2nats"
Documentation = "https://github.com/kliskatek/eip2nats/blob/main/README.md"
Repository = "https://github.com/kliskatek/eip2nats"

[tool.hatch.build.targets.wheel]
packages = ["src/eip2nats"]

[tool.hatch.build]
artifacts = [
    "src/eip2nats/eip_nats_bridge*.so",
    "src/eip2nats/eip_nats_bridge*.pyd",
    "src/eip2nats/lib/*.so*",
    "src/eip2nats/lib/*.dll",
]

[tool.hatch.build.targets.wheel.hooks.custom]
# Uses hatch_build.py to force platform-specific wheel tags

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux*"

# Build nats.c + EIPScanner once per platform (shared across Python versions)
before-all = [
    "pip install pybind11",
    "python scripts/build_nats.py",
    "python scripts/build_eipscanner.py",
]

# Build the pybind11 binding for each Python version
before-build = [
    "pip install pybind11",
    "python scripts/build_binding.py",
]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
# manylinux2014 image includes gcc, cmake, git, openssl-dev
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
before-all = [
    "rm -rf build/",
    "pip install pybind11",
    "python scripts/build_nats.py",
    "python scripts/build_eipscanner.py",
]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
